--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -14,6 +14,7 @@
 }
 
 .logo{
+    margin-left: 10px;
     height: 20px;
     width: 100px;
     display: flex;
@@ -27,6 +28,7 @@
 }
 
 .title{
+    min-width: 405px;
     height: 100%;
     width: calc(100% - 60px);
     display: flex;
@@ -40,8 +42,8 @@
 
 .button-login{ 
     margin-left: 10px;
-    padding: 4px 15px;
-    background-color: #d0d0d0;
+    padding: 4px 20px;
+    background-color: #E3E3E3;
     color: #000;
     text-decoration: none;
     display: flex;
@@ -49,13 +51,13 @@
     flex-wrap: nowrap;
     white-space: nowrap;
     border: #000000 1px solid;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .button-register{
     margin-right: 20px;
-    margin-left: 6px;
-    padding: 4px 15px;
+    margin-left: 12px;
+    padding: 4px 16px;
     background-color: #252525;
     color: #ffffff;
     text-decoration: none;
@@ -64,5 +66,5 @@
     flex-wrap: nowrap;
     white-space: nowrap;
     border: #000000 1px solid;
-    border-radius: 10px;
+    border-radius: 8px;
 }
